Fixed a minor inconsistency in es_es.json

--- a/src/main/resources/assets/extraboats/lang/es_es.json
+++ b/src/main/resources/assets/extraboats/lang/es_es.json
@@ -165,12 +165,12 @@
 
   "_comment": "Nether Extension",
 
-  "item.extraboats.crimson_chest_boat": "Barca de madera carmesí con cofre",
+  "item.extraboats.crimson_chest_boat": "Barca carmesí con cofre",
   "item.extraboats.warped_chest_boat": "Barca distorsionada con cofre",
 
-  "item.extraboats.crimson_furnace_boat": "Barca de madera carmesí con horno",
+  "item.extraboats.crimson_furnace_boat": "Barca carmesí con horno",
   "item.extraboats.warped_furnace_boat": "Barca distorsionada con horno",
 
-  "item.extraboats.large_crimson_boat": "Barca de madera carmesí grande",
+  "item.extraboats.large_crimson_boat": "Barca carmesí grande",
   "item.extraboats.large_warped_boat": "Barca distorsionada grande"
 }
