--- a/src/main/resources/assets/extraboats/lang/it_it.json
+++ b/src/main/resources/assets/extraboats/lang/it_it.json
@@ -32,41 +32,41 @@
   
   "_comment": "Biomes O' Plenty",
   
-  "item.extraboats.cherry_chest_boat": "Barca con baule",
-  "item.extraboats.dead_chest_boat": "Barca con baule",
-  "item.extraboats.fir_chest_boat": "Barca con baule",
-  "item.extraboats.hellbark_chest_boat": "Barca con baule",
-  "item.extraboats.jacaranda_chest_boat": "Barca con baule",
-  "item.extraboats.magic_chest_boat": "Barca con baule",
-  "item.extraboats.mahogany_chest_boat": "Barca con baule",
-  "item.extraboats.palm_chest_boat": "Barca con baule",
-  "item.extraboats.redwood_chest_boat": "Barca con baule",
-  "item.extraboats.umbran_chest_boat": "Barca con baule",
-  "item.extraboats.willow_chest_boat": "Barca con baule",
+  "item.extraboats.cherry_chest_boat": "Barca di ciliegio con baule",
+  "item.extraboats.dead_chest_boat": "Barca morta con baule",
+  "item.extraboats.fir_chest_boat": "Barca di abete chiara con baule",
+  "item.extraboats.hellbark_chest_boat": "Barca di corteccia infernale con baule",
+  "item.extraboats.jacaranda_chest_boat": "Barca di jacaranda con baule",
+  "item.extraboats.magic_chest_boat": "Barca magica con baule",
+  "item.extraboats.mahogany_chest_boat": "Barca di mogano con baule",
+  "item.extraboats.palm_chest_boat": "Barca di palma con baule",
+  "item.extraboats.redwood_chest_boat": "Barca di sequoia con baule",
+  "item.extraboats.umbran_chest_boat": "Barca ombra con baule",
+  "item.extraboats.willow_chest_boat": "Barca di salice con baule",
   
-  "item.extraboats.cherry_furnace_boat": "Barca con fornace",
-  "item.extraboats.dead_furnace_boat": "Barca con fornace",
-  "item.extraboats.fir_furnace_boat": "Barca con fornace",
-  "item.extraboats.hellbark_furnace_boat": "Barca con fornace",
-  "item.extraboats.jacaranda_furnace_boat": "Barca con fornace",
-  "item.extraboats.magic_furnace_boat": "Barca con fornace",
-  "item.extraboats.mahogany_furnace_boat": "Barca con fornace",
-  "item.extraboats.palm_furnace_boat": "Barca con fornace",
-  "item.extraboats.redwood_furnace_boat": "Barca con fornace",
-  "item.extraboats.umbran_furnace_boat": "Barca con fornace",
-  "item.extraboats.willow_furnace_boat": "Barca con fornace",
+  "item.extraboats.cherry_furnace_boat": "Barca di ciliegio con fornace",
+  "item.extraboats.dead_furnace_boat": "Barca morta con fornace",
+  "item.extraboats.fir_furnace_boat": "Barca di abete chiara con fornace",
+  "item.extraboats.hellbark_furnace_boat": "Barca di corteccia infernale con fornace",
+  "item.extraboats.jacaranda_furnace_boat": "Barca di jacaranda con fornace",
+  "item.extraboats.magic_furnace_boat": "Barca magica con fornace",
+  "item.extraboats.mahogany_furnace_boat": "Barca di mogano con fornace",
+  "item.extraboats.palm_furnace_boat": "Barca di palma con fornace",
+  "item.extraboats.redwood_furnace_boat": "Barca di sequoia con fornace",
+  "item.extraboats.umbran_furnace_boat": "Barca ombra con fornace",
+  "item.extraboats.willow_furnace_boat": "Barca di salice con fornace",
   
-  "item.extraboats.large_cherry_boat": "Barca grande ",
-  "item.extraboats.large_dead_boat": "Barca grande ",
-  "item.extraboats.large_fir_boat": "Barca grande ",
-  "item.extraboats.large_hellbark_boat": "Barca grande ",
-  "item.extraboats.large_jacaranda_boat": "Barca grande ",
-  "item.extraboats.large_magic_boat": "Barca grande ",
-  "item.extraboats.large_mahogany_boat": "Barca grande ",
-  "item.extraboats.large_palm_boat": "Barca grande ",
-  "item.extraboats.large_redwood_boat": "Barca grande ",
-  "item.extraboats.large_umbran_boat": "Barca grande ",
-  "item.extraboats.large_willow_boat": "Barca grande ",
+  "item.extraboats.large_cherry_boat": "Barca grande di ciliegio",
+  "item.extraboats.large_dead_boat": "Barca grande morta",
+  "item.extraboats.large_fir_boat": "Barca grande di abete chiara",
+  "item.extraboats.large_hellbark_boat": "Barca grande di corteccia infernale",
+  "item.extraboats.large_jacaranda_boat": "Barca grande di jacaranda",
+  "item.extraboats.large_magic_boat": "Barca grande magica",
+  "item.extraboats.large_mahogany_boat": "Barca grande di mogano",
+  "item.extraboats.large_palm_boat": "Barca grande di palma",
+  "item.extraboats.large_redwood_boat": "Barca grande di sequoia",
+  "item.extraboats.large_umbran_boat": "Barca grande ombra",
+  "item.extraboats.large_willow_boat": "Barca grande di salice",
   
   
   "_comment": "Upgrade Aquatic",
@@ -97,41 +97,41 @@
   
   "_comment": "Environmental",
   
-  "item.extraboats.wisteria_chest_boat": "Barca con baule",
-  "item.extraboats.wisteria_furnace_boat": "Barca con fornace",
-  "item.extraboats.large_wisteria_boat": "Barca grande ",
+  "item.extraboats.wisteria_chest_boat": "Barca di glicine con baule",
+  "item.extraboats.wisteria_furnace_boat": "Barca di glicine con fornace",
+  "item.extraboats.large_wisteria_boat": "Barca grande di glicine",
   
-  "item.extraboats.env_willow_chest_boat": "Barca con baule",
-  "item.extraboats.env_willow_furnace_boat": "Barca con fornace",
-  "item.extraboats.large_env_willow_boat": "Barca grande ",
+  "item.extraboats.env_willow_chest_boat": "Barca di salice con baule",
+  "item.extraboats.env_willow_furnace_boat": "Barca di salice con fornace",
+  "item.extraboats.large_env_willow_boat": "Barca grande di salice",
   
-  "item.extraboats.env_cherry_chest_boat": "Barca con baule",
-  "item.extraboats.env_cherry_furnace_boat": "Barca con fornace",
-  "item.extraboats.large_env_cherry_boat": "Barca grande ",
+  "item.extraboats.env_cherry_chest_boat": "Barca di ciliegio con baule",
+  "item.extraboats.env_cherry_furnace_boat": "Barca di ciliegio con fornace",
+  "item.extraboats.large_env_cherry_boat": "Barca grande di ciliegio",
   
   
   "_comment": "Atmospheric",
   
-  "item.extraboats.rosewood_chest_boat": "Barca con baule",
-  "item.extraboats.morado_chest_boat": "Barca con baule",
-  "item.extraboats.aspen_chest_boat": "Barca con baule",
-  "item.extraboats.kousa_chest_boat": "Barca con baule",
-  "item.extraboats.yucca_chest_boat": "Barca con baule",
-  "item.extraboats.grimwood_chest_boat": "Barca con baule",
+  "item.extraboats.rosewood_chest_boat": "Barca di palissandro con baule",
+  "item.extraboats.morado_chest_boat": "Barca di leopardo con baule",
+  "item.extraboats.aspen_chest_boat": "Barca di aspen con baule",
+  "item.extraboats.kousa_chest_boat": "Barca di kousa con baule",
+  "item.extraboats.yucca_chest_boat": "Barca di yucca con baule",
+  "item.extraboats.grimwood_chest_boat": "Barca cupa con baule",
   
-  "item.extraboats.rosewood_furnace_boat": "Barca con fornace",
-  "item.extraboats.morado_furnace_boat": "Barca con fornace",
-  "item.extraboats.aspen_furnace_boat": "Barca con fornace",
-  "item.extraboats.kousa_furnace_boat": "Barca con fornace",
-  "item.extraboats.yucca_furnace_boat": "Barca con fornace",
-  "item.extraboats.grimwood_furnace_boat": "Barca con fornace",
+  "item.extraboats.rosewood_furnace_boat": "Barca di palissandro con fornace",
+  "item.extraboats.morado_furnace_boat": "Barca di leopardo con fornace",
+  "item.extraboats.aspen_furnace_boat": "Barca di aspen con fornace",
+  "item.extraboats.kousa_furnace_boat": "Barca di kousa con fornace",
+  "item.extraboats.yucca_furnace_boat": "Barca di yucca con fornace",
+  "item.extraboats.grimwood_furnace_boat": "Barca cupa con fornace",
   
-  "item.extraboats.large_rosewood_boat": "Barca grande ",
-  "item.extraboats.large_morado_boat": "Barca grande ",
-  "item.extraboats.large_aspen_boat": "Barca grande ",
-  "item.extraboats.large_kousa_boat": "Barca grande t",
-  "item.extraboats.large_yucca_boat": "Barca grande ",
-  "item.extraboats.large_grimwood_boat": "Barca grande ",
+  "item.extraboats.large_rosewood_boat": "Barca grande di palissandro",
+  "item.extraboats.large_morado_boat": "Barca grande di leopardo",
+  "item.extraboats.large_aspen_boat": "Barca grande di aspen",
+  "item.extraboats.large_kousa_boat": "Barca grande di kousa",
+  "item.extraboats.large_yucca_boat": "Barca grande di yucca",
+  "item.extraboats.large_grimwood_boat": "Barca grande cupa",
   
   
   "_comment": "Autumnity",
@@ -143,24 +143,24 @@
 
   "_comment": "Enhanced Mushrooms",
 
-  "item.extraboats.red_mushroom_chest_boat": "Barca con baule",
-  "item.extraboats.brown_mushroom_chest_boat": "Barca con baule",
-  "item.extraboats.glowshroom_chest_boat": "Barca con baule",
+  "item.extraboats.red_mushroom_chest_boat": "Barca di fungo rosso con baule",
+  "item.extraboats.brown_mushroom_chest_boat": "Barca di fungo marrone con baule",
+  "item.extraboats.glowshroom_chest_boat": "Barca di fungo bioluminescente con baule",
 
-  "item.extraboats.red_mushroom_furnace_boat": "Barca con fornace",
-  "item.extraboats.brown_mushroom_furnace_boat": "Barca con fornace",
-  "item.extraboats.glowshroom_furnace_boat": "Barca con fornace",
+  "item.extraboats.red_mushroom_furnace_boat": "Barca di fungo rosso con fornace",
+  "item.extraboats.brown_mushroom_furnace_boat": "Barca di fungo marrone con fornace",
+  "item.extraboats.glowshroom_furnace_boat": "Barca di fungo bioluminescente con fornace",
 
-  "item.extraboats.large_red_mushroom_boat": "Barca grande Large Red Mushroom Boat",
-  "item.extraboats.large_brown_mushroom_boat": "Barca grande Large Brown Mushroom Boat",
-  "item.extraboats.large_glowshroom_boat": "Barca grande Large Glowshroom Boat",
+  "item.extraboats.large_red_mushroom_boat": "Barca grande di fungo rosso",
+  "item.extraboats.large_brown_mushroom_boat": "Barca grande di fungo marrone",
+  "item.extraboats.large_glowshroom_boat": "Barca grande di fungo bioluminescente",
 
 
   "_comment": "Hanami",
 
-  "item.extraboats.sakura_chest_boat": "Barca con baule",
-  "item.extraboats.sakura_furnace_boat": "Barca con fornace",
-  "item.extraboats.large_sakura_boat": "Barca grande ",
+  "item.extraboats.sakura_chest_boat": "Barca di sakura con baule",
+  "item.extraboats.sakura_furnace_boat": "Barca di sakura con fornace",
+  "item.extraboats.large_sakura_boat": "Barca grande di sakura",
 
 
   "_comment": "Nether Extension",
@@ -171,6 +171,6 @@
   "item.extraboats.crimson_furnace_boat": "Barca cremisi con fornace",
   "item.extraboats.warped_furnace_boat": "Barca distorta con fornace",
   
-  "item.extraboats.large_crimson_boat": "Barca cremisi grande",
-  "item.extraboats.large_warped_boat": "Barca distorta grande"
+  "item.extraboats.large_crimson_boat": "Barca grande cremisi",
+  "item.extraboats.large_warped_boat": "Barca grande distorta"
 }
