--- a/src/main/resources/assets/extraboats/lang/it_it.json
+++ b/src/main/resources/assets/extraboats/lang/it_it.json
@@ -34,7 +34,7 @@
   
   "item.extraboats.cherry_chest_boat": "Barca di ciliegio con baule",
   "item.extraboats.dead_chest_boat": "Barca morta con baule",
-  "item.extraboats.fir_chest_boat": "Barca di abete chiara con baule",
+  "item.extraboats.fir_chest_boat": "Barca di abete chiaro con baule",
   "item.extraboats.hellbark_chest_boat": "Barca di corteccia infernale con baule",
   "item.extraboats.jacaranda_chest_boat": "Barca di jacaranda con baule",
   "item.extraboats.magic_chest_boat": "Barca magica con baule",
@@ -46,7 +46,7 @@
   
   "item.extraboats.cherry_furnace_boat": "Barca di ciliegio con fornace",
   "item.extraboats.dead_furnace_boat": "Barca morta con fornace",
-  "item.extraboats.fir_furnace_boat": "Barca di abete chiara con fornace",
+  "item.extraboats.fir_furnace_boat": "Barca di abete chiaro con fornace",
   "item.extraboats.hellbark_furnace_boat": "Barca di corteccia infernale con fornace",
   "item.extraboats.jacaranda_furnace_boat": "Barca di jacaranda con fornace",
   "item.extraboats.magic_furnace_boat": "Barca magica con fornace",
@@ -58,7 +58,7 @@
   
   "item.extraboats.large_cherry_boat": "Barca grande di ciliegio",
   "item.extraboats.large_dead_boat": "Barca grande morta",
-  "item.extraboats.large_fir_boat": "Barca grande di abete chiara",
+  "item.extraboats.large_fir_boat": "Barca grande di abete chiaro",
   "item.extraboats.large_hellbark_boat": "Barca grande di corteccia infernale",
   "item.extraboats.large_jacaranda_boat": "Barca grande di jacaranda",
   "item.extraboats.large_magic_boat": "Barca grande magica",
