--- a/src/main/resources/assets/boatload/lang/pl_pl.json
+++ b/src/main/resources/assets/boatload/lang/pl_pl.json
@@ -1,17 +1,17 @@
 {
   "entity.boatload.furnace_boat": "Łódka z piecem",
-  "entity.boatload.large_boat": "Duża łódka",
+  "entity.boatload.large_boat": "Wielka łódka",
   "item.boatload.acacia_furnace_boat": "Akacjowa łódka z piecem",
   "item.boatload.birch_furnace_boat": "Brzozowa łódka z piecem",
   "item.boatload.dark_oak_furnace_boat": "Ciemnodębowa łódka z piecem",
   "item.boatload.jungle_furnace_boat": "Tropikalna łódka z piecem",
-  "item.boatload.large_acacia_boat": "Duża akacjowa łódka",
-  "item.boatload.large_birch_boat": "Duża brzozowa łódka",
-  "item.boatload.large_dark_oak_boat": "Duża ciemnodębowa łódka",
-  "item.boatload.large_jungle_boat": "Duża tropikalna łódka",
-  "item.boatload.large_mangrove_boat": "Duża namorzynowa łódka",
-  "item.boatload.large_oak_boat": "Duża dębowa łódka",
-  "item.boatload.large_spruce_boat": "Duża świerkowa łódka",
+  "item.boatload.large_acacia_boat": "Wielka akacjowa łódka",
+  "item.boatload.large_birch_boat": "Wielka brzozowa łódka",
+  "item.boatload.large_dark_oak_boat": "Wielka ciemnodębowa łódka",
+  "item.boatload.large_jungle_boat": "Wielka tropikalna łódka",
+  "item.boatload.large_mangrove_boat": "Wielka namorzynowa łódka",
+  "item.boatload.large_oak_boat": "Wielka dębowa łódka",
+  "item.boatload.large_spruce_boat": "Wielka świerkowa łódka",
   "item.boatload.mangrove_furnace_boat": "Namorzynowa łódka z piecem",
   "item.boatload.oak_furnace_boat": "Dębowa łódka z piecem",
   "item.boatload.spruce_furnace_boat": "Świerkowa łódka z piecem"
