--- a/src/main/resources/assets/boatload/lang/uk_ua.json
+++ b/src/main/resources/assets/boatload/lang/uk_ua.json
@@ -3,16 +3,24 @@
   "entity.boatload.large_boat": "Великий човен",
   "item.boatload.acacia_furnace_boat": "Акацієвий човен з піччю",
   "item.boatload.birch_furnace_boat": "Березовий човен з піччю",
+  "item.boatload.crimson_boat": "Багряний човен",
+  "item.boatload.crimson_chest_boat": "Багряний човен зі скринею",
+  "item.boatload.crimson_furnace_boat": "Багряний човен з піччю",
   "item.boatload.dark_oak_furnace_boat": "Темно-дубовий човен з піччю",
   "item.boatload.jungle_furnace_boat": "Тропічний човен з піччю",
   "item.boatload.large_acacia_boat": "Великий акацієвий човен",
   "item.boatload.large_birch_boat": "Великий березовий човен",
+  "item.boatload.large_crimson_boat": "Великий багряний човен",
   "item.boatload.large_dark_oak_boat": "Великий темно-дубовий човен",
   "item.boatload.large_jungle_boat": "Великий тропічний човен",
   "item.boatload.large_mangrove_boat": "Великий мангровий човен",
   "item.boatload.large_oak_boat": "Великий дубовий човен",
   "item.boatload.large_spruce_boat": "Великий смерековий човен",
+  "item.boatload.large_warped_boat": "Великий химерний човен",
   "item.boatload.mangrove_furnace_boat": "Мангровий човен з піччю",
   "item.boatload.oak_furnace_boat": "Дубовий човен з піччю",
-  "item.boatload.spruce_furnace_boat": "Смерековий човен з піччю"
+  "item.boatload.spruce_furnace_boat": "Смерековий човен з піччю",
+  "item.boatload.warped_boat": "Химерний човен",
+  "item.boatload.warped_chest_boat": "Химерний човен зі скринею",
+  "item.boatload.warped_furnace_boat": "Химерний човен з піччю"
 }
