--- a/src/main/resources/assets/boatload/lang/fr_fr.json
+++ b/src/main/resources/assets/boatload/lang/fr_fr.json
@@ -1,12 +1,12 @@
 {
-  "entity.boatload.furnace_boat": "Bateau avec four",
+  "entity.boatload.furnace_boat": "Bateau motorisé",
   "entity.boatload.large_boat": "Grand bateau",
-  "item.boatload.oak_furnace_boat": "Bateau en ch\u00eane avec four",
-  "item.boatload.spruce_furnace_boat": "Bateau en sapin avec four",
-  "item.boatload.birch_furnace_boat": "Bateau en bouleau avec four",
-  "item.boatload.jungle_furnace_boat": "Bateau en acajou avec four",
-  "item.boatload.acacia_furnace_boat": "Bateau en acacia avec four",
-  "item.boatload.dark_oak_furnace_boat": "Bateau en ch\u00eane noir avec four",
+  "item.boatload.oak_furnace_boat": "Bateau en ch\u00eane motorisé",
+  "item.boatload.spruce_furnace_boat": "Bateau en sapin motorisé",
+  "item.boatload.birch_furnace_boat": "Bateau en bouleau motorisé",
+  "item.boatload.jungle_furnace_boat": "Bateau en acajou motorisé",
+  "item.boatload.acacia_furnace_boat": "Bateau en acacia motorisé",
+  "item.boatload.dark_oak_furnace_boat": "Bateau en ch\u00eane noir motorisé",
   "item.boatload.large_oak_boat": "Grand bateau en ch\u00eane",
   "item.boatload.large_spruce_boat": "Grand bateau en sapin",
   "item.boatload.large_birch_boat": "Grand bateau en bouleau",
